# ftsedemo

./: config.json  demo.ipynb  deploy.sh  pyproject.toml  request.sh  traffic_config.json
scripts/: deploy.sh  endpoint.yaml  request.sh
