[tool.poetry]
name = "ftsedemo"
version = "0.1.0"
description = "Using mlflow in Azure"
authors = ["DAA Data Science"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-dotenv = "^1.0.0"
azureml-core = "^1.54.0.post1"
pandas = "^2.1.4"
ipykernel = "^6.28.0"
setuptools = "^69.0.3"
yfinance = "^0.2.35"
plotly = "^5.18.0"
nbformat = "^5.9.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
azure-storage-blob = "^12.19.0"
hyperopt = "^0.2.7"
scikit-learn = "1.3.2"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "~2.12"
azureml-mlflow = "^1.54.0.post1"
azure-ai-ml = "^1.12.1"
tensorflow-intel = "2.12.1"
mlflow = "^2.9.2"
evidently = "^0.4.13"
cryptography = "3.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
